# llm-zoomcamp2026

./: .gitignore
01-agentic-rag/code/: .gitignore  agents.ipynb  anthropic_kit.py  ingest.py  notebook.ipynb  persinsent_rag.ipynb  persistent_rag_ingest.ipynb  pyproject.toml  rag.ipynb  rag_helper.py
02-vector-search/code/: pyproject.toml  rag_helper_anthropic.py  vector-search-peristant.ipynb  vector-search-pgvector.ipynb  vector-search.ipynb
02-vector-search/homework/: hw.ipynb  pyproject.toml
